--- a/autoaval.html
+++ b/autoaval.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="autoaval.css">
-    <link rel="shortcut icon" href="imagens/Estrela.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/star.png" type="image/x-icon">
     <title>Autoavaliação</title>
 </head>
     <body>
@@ -28,9 +28,6 @@
             <div class="conteudo">
                 <p>
                     Analisando todo esse peíodo do primeiro trimestre, eu não senti tanta dificuldade com matemática, por mais que nossas aulas tenham parado e voltado várias vezes. Eu achei que iria um pouco melhor na prova, porém, a nota que tirei abriu um vasto espaço onde eu consegui entender onde eu estava errando para que eu pudesse concertar nas futuras provas e portfólios. <br>O conteúdo que eu mais senti dificuldade (e que eu mais errei questões) foram as dizimas periódicas, então eu fui atrás de estudar mais esse conteúdo. As operações com os binários também foram uma pedra no sapato, porém eu fui capaz de entende-las e até as acertei na prova. Nesse trimestre eu fiz todos os exercicios propostos pela professora e tentei ao máximo participar em sala de aula. <br>Uma coisa que me ajudou muito na parte dos conjuntos numéricos foi o livro "O Algebrista" de Laercio Vasconcelos, o livro é mais voltado para vestibulares mas eu acho as explicações dele muito boas. A melhor forma para mim aprender os conteúdos é lendo e fazendo exercícios, eu não gosto muito de video-aulas para matemática, porém, também tive que assistir algumas e até coloquei vídeos na parte dos binários. <br>Gostei muito de fazer o portfólio, principalmente porque ele me incentivou a buscar coisas, principalmente de web, fora de sala e também me ajudou a lembrar dos conteúdos durante o período em que não tivemos aula. Em relação as aulas, eu gostaria de ter mais aulas no laboratório, porém, eu sei que é difícil principalmente a questão do barulho que a turma faz, mas acho que seria uma boa idéia. <br>Em resumo, eu fui capaz de entender os conteúdos e, quando tive dificuldade, fui atrás de entender para conseguir corrigir, as aulas estão sendo muito boas, porém acho que ter algumas aulas no laboratório seria uma boa idéia.
-                </p>
-                <p>
-                    Ícone
                 </p>
             </div>
         </code>        
