--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="imagens/livro.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/ClosedBook.png" type="image/x-icon">
     <title>Pagina Principal</title>
 </head>
     <body>
@@ -50,7 +50,7 @@
                 Todas as páginas podem ser acessadas clicando nos 3 riscos no canto supertior esquerdo da tela. A página 1&ordm; trimestre redireciona aos links de outras páginas onde os conteúdos podem ser acessados. Cada conteúdo recebe uma página exclusiva dentro de uma lista. A página "Autoavaliação" contém uma reflexão sobre os conteúdos junto com algumas referências que achei importante citar.
             </p> 
             <p>
-                Todos os <i>Favicons</i> (ícones que aparecem ao lado do nome da guia) pertencem ao site <a href="https://www.flaticon.com/br/">Flaticon.com</a>
+                Todos os <i>Favicons</i> (ícones que aparecem ao lado do nome da guia) pertencem ao site <a href="https://openmoji.org/" target="_blank">Openmoji.org</a>
             </p>
             <p align="right">Fonte <a href="https://pixlr.com/br/image-generator/" target="_blank">Pixrl - AI Image Generator</a></p>
         </code>
