--- a/intervalos.html
+++ b/intervalos.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/InputNumbers.png" type="image/x-icon">
     <link rel="stylesheet" href="intervalos.css">
     <title>Intervalos</title>
 </head>
@@ -33,7 +34,7 @@
             <div class="reta">
                 <img class="reta" algin="right" src="imagens/Reta.png" alt="">
                 <p>
-                    A representação em reta é a mais usual dentre as outras, nela temos os números e logo abaixo um círculo que pode ser tanto preenchido como vazado. Caso o circulo seja vazado significa que a reta vai até aquele número, sem o contabilizar, no exemplo ao lado podemos notar que o circulo do -6 está vazado, ou seja, a reta vai até o -5,99999..., mas nunca contanto o 6. Já o circulo preenchido significa que a reta vai até o número contanto o número da reta, por exemplo, na reta ao lado o número vai passar do 5,999... e ir até o 6, para assim completar a reta.
+                    A representação em reta é a mais usual dentre as outras, nela temos os números e logo abaixo um círculo que pode ser tanto preenchido como vazado. Caso o circulo seja vazado significa que a reta vai até aquele número, sem o contabilizar, no exemplo ao lado podemos notar que o circulo do -6 está vazado, ou seja, a reta vai até o -5,99999..., mas nunca contando o 6. Já o circulo preenchido significa que a reta vai até o número contanto o número da reta, por exemplo, na reta ao lado o número vai passar do 5,999... e ir até o 6, para assim completar a reta.
                 </p>
             </div>
             <div class="int">
