--- a/binarios.html
+++ b/binarios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Binários</title>
-     <link rel="shortcut icon" href="imagens/Binary.png" type="image/x-icon">
+     <link rel="shortcut icon" href="imagens/InputNumbers.png" type="image/x-icon">
     <link rel="stylesheet" href="binarios.css">
 </head>
     <body link="#FFFFFF" vlink="#FFFFFF">
