--- a/octais.html
+++ b/octais.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Octais</title>
-     <link rel="shortcut icon" href="imagens/Calculator.png" type="image/x-icon">
+     <link rel="shortcut icon" href="imagens/InputNumbers.png" type="image/x-icon">
     <link rel="stylesheet" href="octais.css">
 </head>
     <body>
